# pose_extractor

./: CMakeLists.txt  CMakeLists_rev1.txt  README.md  package.xml
scripts/: trajectory_to_pose.py
